<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Appia_demoActivity!</string>
    <string name="app_name">Appia_demo</string>
    
    <!-- splash -->
    
    <!-- home -->
    <string name="home_search_hint">Search store</string>
    <string name="home_search_button">O</string>
    <string name="home_greeting">Welcome,</string>
    <string name="home_featured">Featured</string>
    <string name="home_recommended">Recommended</string>
    <string name="home_friends">Installed by friends</string>
    
    <!-- app details -->
    <string name="details_install">Install</string>
    <string name="details_description_header">Description</string>
    <string name="details_description_A">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="details_description_B">Ut sit amet leo eu nunc tempus vehicula sit amet vel tellus. Duis volutpat diam in tellus mattis eget sodales massa cursus. Proin tincidunt nulla quis quam cursus sodales. Mauris vitae vulputate lorem. Suspendisse nisi libero, ullamcorper nec tincidunt sed, lobortis a nibh. In fringilla imperdiet quam at tincidunt. Pellentesque pulvinar risus vitae dolor fermentum auctor eu pharetra erat. Nullam nec nisi nibh, ut consectetur lorem.</string>

</resources>