<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#262626" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">
    
	    <EditText
	    	android:id="@+id/home_search_field"
	        android:layout_width="0dp"
	        android:layout_height="56dp"
	        android:layout_weight="1"
	        android:hint="@string/home_search_hint" >
	        <requestFocus />
		</EditText>    
		
	    <Button
            android:id="@+id/button1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:text="@string/home_search_button"
            android:layout_marginTop="-1dp" />
	
    </LinearLayout>
    
    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_greeting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#91ce00"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:paddingLeft="6dp"
        android:text="@string/home_featured"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:paddingBottom="4dp" />
    
    <HorizontalScrollView 
        android:layout_height="116dp"
        android:layout_width="fill_parent">
        
    </HorizontalScrollView>
    
     <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:weightSum="1.0"
        android:orientation="horizontal" >    
    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/title_bar"
	        android:paddingLeft="6dp"
	        android:text="@string/home_recommended"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#ffffff"
	        android:textStyle="bold"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:layout_weight="0.5" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/title_bar"
	        android:paddingLeft="6dp"
	        android:text="@string/home_friends"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#ffffff"
	        android:textStyle="bold"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:layout_weight="0.5" />
    
    </LinearLayout>
    
     <GridView
         android:id="@+id/home_app_grid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"
         android:verticalSpacing="1dp"
         android:horizontalSpacing="1dp"
         android:stretchMode="columnWidth" >         
         
         
         
     </GridView>

</LinearLayout>