<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/details_search_button"
        android:ems="10"
        android:hint="@string/home_search_hint" />

    <Button
        android:id="@+id/details_search_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        
        android:layout_alignParentRight="true"
        android:text="@string/home_search_button"
        android:layout_marginTop="5dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp" />

    <TextView
        android:id="@+id/details_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/details_text_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/details_text_name"
        android:layout_below="@+id/details_text_name"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/details_text_name"
        android:layout_marginRight="6dp"
        android:text="@string/details_install"
        android:background="@drawable/button_install"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    
</RelativeLayout>